// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render with many props assigned 1`] = `
<div>
  <article
    class="items-center bg-white [&_svg]:fill-secondary text-secondary flex flex-col flex-nowrap justify-around m-4 min-h-[100px] min-w-[100px] p-6 focus-visible:outline-none shadow-sm transition-shadow duration-200 ease-linear hover:shadow-lg focus-visible:shadow-lg test-class"
  >
    Test
  </article>
</div>
`;

exports[`Card > should render with required props 1`] = `
<div>
  <article
    class="items-center bg-white [&_svg]:fill-secondary text-secondary flex flex-col flex-nowrap justify-around m-4 min-h-[100px] min-w-[100px] p-6 shadow-md focus-visible:outline-none"
  >
    Test
  </article>
</div>
`;
